Fixed variables for light- & dark mode integration

--- a/src/app/entry/entry-wrapper/entry-wrapper.component.scss
+++ b/src/app/entry/entry-wrapper/entry-wrapper.component.scss
@@ -11,6 +11,6 @@
 }
 
 #content-encapsulation {
-  background: var(--background-darkmode-default);
+  background: var(--background-default);
   width: 378px;
 }
