--- a/src/app/sidemenu/sidemenu.component.scss
+++ b/src/app/sidemenu/sidemenu.component.scss
@@ -1,6 +1,6 @@
 .header-item,
 .custom-item {
-  --color: var(--text-darkmode-default);
+  --color: var(--text-default);
 }
 
 .active-header-item {
